--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Git</title>
 </head>
 <body>
-  <p>Welcome to git</p>
+  <p>Welcome to git and</p>
   <a href="https://www.youtube.com/watch?v=j2F77U-2FuQ&list=PLDyvV36pndZFHXjXuwA_NywNrVQO0aQqb&index=3">взято отсюда</a>
 </body>
 </html>
