--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git ty</title>
+  <title>Git hello</title>
+<script src="/src/script.js"></script>
 </head>
 <body>
   <p>Welcome to git</p>
-  <p>New line</p>
-  <p>NEW </p>
   <a href="https://www.youtube.com/watch?v=j2F77U-2FuQ&list=PLDyvV36pndZFHXjXuwA_NywNrVQO0aQqb&index=3">взято отсюда</a>
+  <script>hello()</script>
 </body>
 </html>
