--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <script src="/script.js"></script>
 </head>
 <body>
-
-  <!-- changes -->
-  <p>Git rules</p>
+  <p>Welcome to git</p>
+  <a href="https://www.youtube.com/watch?v=j2F77U-2FuQ&list=PLDyvV36pndZFHXjXuwA_NywNrVQO0aQqb&index=3">взято отсюда</a>
+  <script>
+  hello();
+  </script>
+  ...Unfinished changes...
 </body>
 </html>
